Fix overlap in playwright selectors
Refactor trial referenced in previous commit failed

I saw that each test fixture was being created twice (sometimes 3 times)
I still think that some fixtures being created twice is a red hearing,
and something we should fix, but some tests seem to (annoyingly)
depend on this feature to reset state.

--- a/src/components/bootstrap-modal/slides/decisions/styles.css
+++ b/src/components/bootstrap-modal/slides/decisions/styles.css
@@ -28,13 +28,13 @@
     }
   }
 
-  .decision-buttons {
+  .bootstrap-decision-buttons {
     position: absolute;
     top: 75%;
 
     display: flex;
 
-    .decision-button {
+    .bootstrap-decision-button {
       position: relative;
     }
 
